# hos-test-mcp

./: .gitignore  README.md  hos_report_test.py  pyproject.toml  qa_tester_mcp.py
agents/: .gitignore  database_generator.py  knowledge_core.py  pdf_data_extraction_local_llm.py  pdf_data_handler.py  pdf_data_handler_v2.py  pdf_validator.py  report_validator.py
mcp-tool-project/: README.md  requirements.txt
mcp-tool-project/src/: main.py
mcp-tool-project/src/mcp_tool/: sdk_interface.py  test_suite.py
mcp-tool-project/tests/: test_mcp_tool.py
